--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="aboutUs/index.html">About Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <div class="line"></div>
     <div class="image-card-container">
         <div class="image-card">
             <img src="image/image1.jpg" alt="Image 1">
@@ -34,7 +36,7 @@
             <div class="image-text">Welcome to the website</div>
         </div>
     </div>
-    <div class="line"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
