--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -17,7 +17,7 @@
             <p>The visionary leader of our team, ensuring we stay on track and achieve our goals.</p>
         </div>
         <div class="team-member">
-            <img src="images/member1.jpeg" alt="Member 1">
+            <img src="images/member1.jpg" alt="Member 1">
             <h2>Harsh Kaushik</h2>
             <p>Full-stack developer with a passion for creating seamless user experiences.</p>
         </div>
