added about and home sections

--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -10,6 +10,10 @@
     <header>
         <h1>About Us</h1>
     </header>
+    <section class="about">
+        <h2>About Our Website</h2>
+        <p>Welcome to our tourism guide website. We are dedicated to providing you with the best travel information and tips to make your journey unforgettable. Our team of experts works tirelessly to bring you the latest and most accurate information about various destinations around the world.</p>
+    </section>
     <section class="team">
         <div class="team-member">
             <img src="images/team-lead.jpeg" alt="Team Lead">
