--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="team-member">
             <img src="images/member1.jpg" alt="Member 1">
-            <h2>Harsh Kaushik (Tech Lead)</h2>
+            <h2>Harsh Kaushik</h2>
             <p>Full-stack developer with a passion for creating seamless user experiences.</p>
         </div>
         <div class="team-member">
