--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css"> <!-- Include the responsive CSS file -->
+    <link rel="stylesheet"media="screen and (max-width: 900px)" href="responsive.css">
+    <link rel="icon" href="image/logo.png">
     <title>Travel Website</title>
 </head>
 <body>
@@ -46,7 +47,7 @@
     <section class="places" id="home">
         <h2>Explore Our Top Destinations</h2>
         <div class="places-container">
-            <div class="place-card" onclick="location.href='usa.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/usa/usa.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/usa.jpeg" alt="USA">
@@ -220,23 +221,36 @@
 
      <!-- About Section -->
      <section class="about" id="about">
-        <h2>About Our Website</h2>
-        <p>Welcome to our tourism guide website. We are dedicated to providing you with the best travel information and tips to make your journey unforgettable. Our team of experts works tirelessly to bring you the latest and most accurate information about various destinations around the world.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam saepe quibusdam rem nesciunt aperiam neque ut iste eius, voluptatem laudantium consequatur nostrum beatae suscipit, quis ad optio accusantium atque. Nulla officiis deserunt deleniti dolor, quas a autem soluta laborum accusantium eius illo commodi est eaque tempore odio nihil quae minus nostrum. Ullam deserunt unde perferendis doloremque molestias ex hic, mollitia nam sit quod iure fuga repudiandae numquam neque magni molestiae tempora libero incidunt, a quis minus aperiam labore? Adipisci sit autem laboriosam eveniet debitis reiciendis tempore ullam voluptate optio, molestias eum modi quis animi. Mollitia eos explicabo sequi eum illo?</p>
+        <div class="about-content">
+            <div class="about-text">
+                <h2>About Our Website</h2>
+                <p>Welcome to our tourism guide website. We are dedicated to providing you with the best travel information and tips to make your journey unforgettable. Our team of experts works tirelessly to bring you the latest and most accurate information about various destinations around the world.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam saepe quibusdam rem nesciunt aperiam neque ut iste eius, voluptatem laudantium consequatur nostrum beatae suscipit, quis ad optio accusantium atque. Nulla officiis deserunt deleniti dolor, quas a autem soluta laborum accusantium eius illo commodi est eaque tempore odio nihil quae minus nostrum. Ullam deserunt unde perferendis doloremque molestias ex hic, mollitia nam sit quod iure fuga repudiandae numquam neque magni molestiae tempora libero incidunt, a quis minus aperiam labore? Adipisci sit autem laboriosam eveniet debitis reiciendis tempore ullam voluptate optio, molestias eum modi quis animi. Mollitia eos explicabo sequi eum illo?</p>
+            </div>
+            <div class="about-image">
+                <img src="image/about_section_image.jpg" alt="About">
+            </div>
+        </div>
     </section>
     
     <footer>
-        <div class="container" id="contact">
-            <h2>Contact Us</h2>
-            <p>Email: harsh@tourismwebsite.com</p>
-            <p>Phone: +91 7880019760</p>
-            <p>Address: D-88, Saraswati Vihar, NTPC Township, Jamnipali, Korba, Chhattisgarh</p>
-            <ul class="social-media">
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">LinkedIn</a></li>
-            </ul>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-left">
+                    <h2>Contact Us</h2>
+                    <p>Email: contact@tourismwebsite.com</p>
+                    <p>Phone: +123 456 7890</p>
+                    <p>Address: 123 Tourism St, Travel City, Country</p>
+                </div>
+                <div class="footer-right">
+                    <ul class="social-media">
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="script.js"></script>
