added animation to the about image

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <h2>Contact Us</h2>
-                    <p>Email: contact@tourismwebsite.com</p>
-                    <p>Phone: +123 456 7890</p>
-                    <p>Address: 123 Tourism St, Travel City, Country</p>
+                    <p>Email: harsh@tourismwebsite.com</p>
+                    <p>Phone: +91 7880019760</p>
+                    <p>Address:  D-88, Saraswati Vihar, NTPC Township, Jamnipali, Korba, Chhattisgarh</p>
                 </div>
                 <div class="footer-right">
                     <ul class="social-media">
