--- a/cardWebsite/usa/usa.html
+++ b/cardWebsite/usa/usa.html
@@ -3,10 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>USA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to USA</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="aboutUs/index.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="usa.html">USA</a></li>
+                <li><a href="singapore.html">Singapore</a></li>
+                <li><a href="india.html">India</a></li>
+                <li><a href="japan.html">Japan</a></li>
+                <li><a href="australia.html">Australia</a></li>
+            </ul>
+            <input type="text" class="search-bar" placeholder="Search...">
+        </nav>
+    </header>
+    <main>
+        <div class="welcome-container">
+            <h1>Welcome to USA</h1>
+        </div>
+        <div class="carousel-container">
+            <button class="carousel-button prev">‹</button>
+            <div class="carousel">
+                <div class="card">
+                    <img src="../../image/usacard1.jpg" alt="Card 1">
+                    <div class="caption">Caption for Card 1</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard2.jpg" alt="Card 2">
+                    <div class="caption">Caption for Card 2</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard3.jpg" alt="Card 3">
+                    <div class="caption">Caption for Card 3</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard4.jpg" alt="Card 4">
+                    <div class="caption">Caption for Card 4</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard5.jpg" alt="Card 5">
+                    <div class="caption">Caption for Card 5</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard6.jpg" alt="Card 6">
+                    <div class="caption">Caption for Card 6</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard7.jpg" alt="Card 7">
+                    <div class="caption">Caption for Card 7</div>
+                </div>
+                <div class="card">
+                    <img src="../../image/usacard8.jpg" alt="Card 8">
+                    <div class="caption">Caption for Card 8</div>
+                </div>
+            </div>
+            <button class="carousel-button next">›</button>
+        </div>
+    </main>
+    <hr>
+    <script src="script.js"></script>
 </body>
 </html>
