--- a/cardWebsite/usa/usa.html
+++ b/cardWebsite/usa/usa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USA</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,46 +26,47 @@
         <div class="welcome-container">
             <h1>Welcome to USA</h1>
         </div>
-        <div class="carousel-container">
-            <button class="carousel-button prev">‹</button>
-            <div class="carousel">
-                <div class="card">
-                    <img src="../../image/usacard1.jpg" alt="Card 1">
-                    <div class="caption">Caption for Card 1</div>
+        <section>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../../image/usacard2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../../image/usacard5.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../../image/usacard1.jpg" class="d-block w-100" alt="...">
+                  </div>
                 </div>
-                <div class="card">
-                    <img src="../../image/usacard2.jpg" alt="Card 2">
-                    <div class="caption">Caption for Card 2</div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </section>
+        <hr>
+        <section class="description-section">
+            <div class="description-container">
+                <div class="description-image">
+                    <img src="../../image/usacard6.jpg" alt="USA Description">
                 </div>
-                <div class="card">
-                    <img src="../../image/usacard3.jpg" alt="Card 3">
-                    <div class="caption">Caption for Card 3</div>
-                </div>
-                <div class="card">
-                    <img src="../../image/usacard4.jpg" alt="Card 4">
-                    <div class="caption">Caption for Card 4</div>
-                </div>
-                <div class="card">
-                    <img src="../../image/usacard5.jpg" alt="Card 5">
-                    <div class="caption">Caption for Card 5</div>
-                </div>
-                <div class="card">
-                    <img src="../../image/usacard6.jpg" alt="Card 6">
-                    <div class="caption">Caption for Card 6</div>
-                </div>
-                <div class="card">
-                    <img src="../../image/usacard7.jpg" alt="Card 7">
-                    <div class="caption">Caption for Card 7</div>
-                </div>
-                <div class="card">
-                    <img src="../../image/usacard8.jpg" alt="Card 8">
-                    <div class="caption">Caption for Card 8</div>
+                <div class="description-text">
+                    <h2>About USA</h2>
+                    <p>The United States of America (USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America. It consists of 50 states, a federal district, five major unincorporated territories, 326 Indian reservations, and some minor possessions. The capital city is Washington, D.C., and the most populous city is New York City.</p>
+                    <p>The United States is known for its diverse geography, climate, and wildlife. It is a melting pot of cultures, with a rich history and a significant influence on global politics, economy, and culture. The country is renowned for its technological advancements, educational institutions, and cultural landmarks.</p>
                 </div>
             </div>
-            <button class="carousel-button next">›</button>
-        </div>
+        </section>
     </main>
     <hr>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
