--- a/cardWebsite/usa/usa.html
+++ b/cardWebsite/usa/usa.html
@@ -29,31 +29,30 @@
         <section>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../../image/usacard2.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../../image/usacard5.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../../image/usacard1.jpg" class="d-block w-100" alt="...">
-                  </div>
+                    <div class="carousel-item active">
+                        <img src="../../image/usacard2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../image/usacard5.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../image/usacard1.jpg" class="d-block w-100" alt="...">
+                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
                 </a>
-              </div>
+            </div>
         </section>
-        <hr>
         <section class="description-section">
             <div class="description-container">
                 <div class="description-image">
-                    <img src="../../image/usacard6.jpg" alt="USA Description">
+                    <img src="../../image/usa_description.jpg" alt="USA Description">
                 </div>
                 <div class="description-text">
                     <h2>About USA</h2>
@@ -62,11 +61,58 @@
                 </div>
             </div>
         </section>
+        <section class="timeline-section">
+            <div class="timeline-container">
+                <button class="timeline-button prev">‹</button>
+                <div class="timeline">
+                    <div class="timeline-event active">
+                        <div class="timeline-date">1776</div>
+                        <div class="timeline-description">
+                            <img src="../../image/usacard6.jpg" alt="Declaration of Independence">
+                            <h3>Declaration of Independence</h3>
+                            <p>The United States declared independence from Great Britain on July 4, 1776. This historic event marked the birth of a new nation, founded on principles of liberty, equality, and democracy. The Declaration of Independence, primarily authored by Thomas Jefferson, is a seminal document in American history.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-event">
+                        <div class="timeline-date">1865</div>
+                        <div class="timeline-description">
+                            <img src="../../image/usacard5.jpg" alt="End of Civil War">
+                            <h3>End of Civil War</h3>
+                            <p>The American Civil War ended in 1865, leading to the abolition of slavery. This conflict, fought between the Northern states (Union) and the Southern states (Confederacy), was one of the most significant events in American history, reshaping the nation's social and political landscape.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-event">
+                        <div class="timeline-date">1969</div>
+                        <div class="timeline-description">
+                            <img src="../../image/usacard7.jpg" alt="Moon Landing">
+                            <h3>Moon Landing</h3>
+                            <p>NASA's Apollo 11 mission successfully landed the first humans on the Moon in 1969. Astronauts Neil Armstrong and Buzz Aldrin made history with their lunar walk, symbolizing human achievement and the spirit of exploration. This event remains a milestone in space exploration.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-event">
+                        <div class="timeline-date">2001</div>
+                        <div class="timeline-description">
+                            <img src="../../image/usacard1.jpg" alt="9/11 Attacks">
+                            <h3>9/11 Attacks</h3>
+                            <p>The September 11 attacks in 2001 had a profound impact on the United States and the world. Coordinated terrorist attacks by the extremist group al-Qaeda targeted the World Trade Center and the Pentagon, leading to significant loss of life and changes in global security policies.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="timeline-button next">›</button>
+            </div>
+        </section>
+        <section class="flights-section">
+            <h2>Flights Information</h2>
+            <div class="flights-container">
+                <button id="fetch-flights">Fetch Flights</button>
+                <div id="flights-data"></div>
+            </div>
+        </section>
     </main>
     <hr>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
