--- a/cardWebsite/usa/usa.html
+++ b/cardWebsite/usa/usa.html
@@ -102,7 +102,7 @@
             </div>
         </section>
         <section class="weather-section">
-            <h2 class="my-4 text-center">Weather for <span id="cityName"></span></h2>
+            <h2 class="my-4 text-center">Weather for <span id="cityName">New York</span></h2>
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm">
@@ -110,11 +110,11 @@
                             <h4 class="my-0 fw-normal">Temperatures</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title"><span id="temp2"></span><small class="text-muted fw-light"> °C</small></h1>
+                            <h1 class="card-title pricing-card-title"><span id="temp2">20</span><small class="text-muted fw-light"> °C</small></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>Temperature is <span id="temp"></span> °C</li>
-                                <li>Min Temperature is <span id="min_temp"></span> °C</li>
-                                <li>Max Temperature is <span id="max_temp"></span> °C</li>
+                                <li>Temperature is <span id="temp">20</span> °C</li>
+                                <li>Min Temperature is <span id="min_temp">15</span> °C</li>
+                                <li>Max Temperature is <span id="max_temp">25</span> °C</li>
                             </ul>
                         </div>
                     </div>
@@ -125,11 +125,11 @@
                             <h4 class="my-0 fw-normal">Humidity Info</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title"><span id="humidity2"></span></h1>
+                            <h1 class="card-title pricing-card-title"><span id="humidity2">5</span></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>Wind Degrees is <span id="wind_degrees"></span> °</li>
-                                <li>Cloud PCT is <span id="cloud_pct"></span> %</li>
-                                <li>Humidity is <span id="humidity"></span> %</li>
+                                <li>Wind Degrees is <span id="wind_degrees">12</span> °</li>
+                                <li>Cloud PCT is <span id="cloud_pct">34</span> %</li>
+                                <li>Humidity is <span id="humidity">5</span> %</li>
                             </ul>
                         </div>
                     </div>
@@ -140,11 +140,11 @@
                             <h4 class="my-0 fw-normal">Wind Info</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title"><span id="wind_speed2"></span><small class="text-muted fw-light"> km/hr</small></h1>
+                            <h1 class="card-title pricing-card-title"><span id="wind_speed2">2</span><small class="text-muted fw-light"> km/hr</small></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>Wind Speed is <span id="wind_speed"></span> km/hr</li>
-                                <li>Sunrise Time is <span id="sunrise"></span></li>
-                                <li>Sunset Time is <span id="sunset"></span></li>
+                                <li>Wind Speed is <span id="wind_speed">2</span> km/hr</li>
+                                <li>Sunrise Time is <span id="sunrise">5:40 AM</span></li>
+                                <li>Sunset Time is <span id="sunset">6:30 PM</span></li>
                             </ul>
                         </div>
                     </div>
