--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="services/services.html">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="aboutUs/index.html">About Us</a></li>
                 </ul>
@@ -217,7 +217,6 @@
         </div>
     </section>
 
-    
 
      <!-- About Section -->
      <section class="about" id="about">
