changed the description in spain and germany

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <h3>Germany</h3>
                     </div>
                     <div class="place-card-back">
-                        <p>Experience the heart break of WW2</p>
+                        <p>Experience the Fairytale castles, rich history, vibrant cities, scenic landscapes, and hearty cuisine of Germany.</p>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                         <h3>Spain</h3>
                     </div>
                     <div class="place-card-back">
-                        <p>Experience the high concentrated cocaine</p>
+                        <p>Experience the Sun-soaked beaches, vibrant festivals, rich history, stunning landscapes, unforgettable flavors of Spain</p>
                     </div>
                 </div>
             </div>
@@ -223,8 +223,8 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>About Our Website</h2>
-                <p>Welcome to our tourism guide website. We are dedicated to providing you with the best travel information and tips to make your journey unforgettable. Our team of experts works tirelessly to bring you the latest and most accurate information about various destinations around the world.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam saepe quibusdam rem nesciunt aperiam neque ut iste eius, voluptatem laudantium consequatur nostrum beatae suscipit, quis ad optio accusantium atque. Nulla officiis deserunt deleniti dolor, quas a autem soluta laborum accusantium eius illo commodi est eaque tempore odio nihil quae minus nostrum. Ullam deserunt unde perferendis doloremque molestias ex hic, mollitia nam sit quod iure fuga repudiandae numquam neque magni molestiae tempora libero incidunt, a quis minus aperiam labore? Adipisci sit autem laboriosam eveniet debitis reiciendis tempore ullam voluptate optio, molestias eum modi quis animi. Mollitia eos explicabo sequi eum illo?</p>
+                <p>Welcome to H4A Travels, your trusted tourism guide dedicated to making every journey extraordinary. At H4A Travels, our team of passionate travel experts works around the clock to bring you the latest and most reliable information on diverse destinations worldwide. Whether you're a seasoned explorer or planning your first adventure, H4A Travels is here to inspire and guide you every step of the way. We strive to make your journey smooth and enjoyable. Trust us to be your go-to source for memorable and enriching travel experiences.</p <p> H4A Travels: Your Journey Begins Here </p>
+                <p> Explore the World, One Destination at a Time </p>
             </div>
             <div class="about-image">
                 <img src="image/about_section_image.jpg" alt="About">
