--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='singapore.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/singapore/singapore.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/singapore.jpg" alt="Singapore">
