--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='india.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/india/india.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/india.jpeg" alt="India">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='japan.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/japan/japan.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/japan.jpeg" alt="Japan">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/australia/australia.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/austraila.jpg" alt="Australia">
@@ -103,10 +103,10 @@
                 </div>
             </div>
             <!-- Add more place cards as needed -->
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/russia/russia.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
-                        <img src="image/russia.jpg" alt="Australia">
+                        <img src="image/russia.jpg" alt="Russia">
                         <h3>Russia</h3>
                     </div>
                     <div class="place-card-back">
@@ -114,10 +114,10 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/norway/norway.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
-                        <img src="image/norway.jpeg" alt="Australia">
+                        <img src="image/norway.jpeg" alt="Norway">
                         <h3>Norway</h3>
                     </div>
                     <div class="place-card-back">
@@ -125,10 +125,10 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/greece/greece.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
-                        <img src="image/greece.jpeg" alt="Australia">
+                        <img src="image/greece.jpeg" alt="Greece">
                         <h3>Greece</h3>
                     </div>
                     <div class="place-card-back">
@@ -136,10 +136,10 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/uae/uae.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
-                        <img src="image/uae.jpeg" alt="Australia">
+                        <img src="image/uae.jpeg" alt="UAE">
                         <h3>UAE</h3>
                     </div>
                     <div class="place-card-back">
