--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='cardWebsite/uae/uae.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/UAE/uae.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/uae.jpeg" alt="UAE">
@@ -147,10 +147,10 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/egypt/egypt.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
-                        <img src="image/egypt.jpeg" alt="Australia">
+                        <img src="image/egypt.jpeg" alt="Egypt">
                         <h3>Egypt</h3>
                     </div>
                     <div class="place-card-back">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/france/france.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/france.jpeg" alt="Australia">
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/italy/italy.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/italy.jpeg" alt="Australia">
@@ -180,10 +180,10 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/germany/germany.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
-                        <img src="image/germany.jpeg" alt="Australia">
+                        <img src="image/germany.jpeg" alt="germany">
                         <h3>Germany</h3>
                     </div>
                     <div class="place-card-back">
@@ -191,7 +191,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/spain/spain.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/spain.jpeg" alt="Australia">
