weather feature working

--- a/cardWebsite/usa/usa.html
+++ b/cardWebsite/usa/usa.html
@@ -526,6 +526,10 @@
                     </div>
                 </div>
             </div>
+            <div class="search-container">
+                <input type="text" id="city" placeholder="Enter city name">
+                <button id="submit">Search</button>
+            </div>
         </section>
         <section class="flights-section">
             <h2>Flights Information</h2>
