--- a/cardWebsite/russia/russia.html
+++ b/cardWebsite/russia/russia.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div class="welcome-container">
-            <h1>Welcome to Australia</h1>
+            <h1>Welcome to Russia</h1>
         </div>
         <section>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
