all places done

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="place-card" onclick="location.href='australia.html'">
+            <div class="place-card" onclick="location.href='cardWebsite/switzerland/switzerland.html'">
                 <div class="place-card-inner">
                     <div class="place-card-front">
                         <img src="image/switzerland.jpeg" alt="Australia">
