done some changes

--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <h2>Contact Us</h2>
-                    <p>Email: harsh@tourismwebsite.com</p>
+                    <p>Email: akshat2701@gmail.com</p>
                     <p>Phone: +91 7880019760</p>
-                    <p>Address:  D-88, Saraswati Vihar, NTPC Township, Jamnipali, Korba, Chhattisgarh</p>
+                    <p>Address:  IIIT Naya Raipur, Sector 24, Atal Nagar-Nava Raipur, Uparwara, Chhattisgarh 493661</p>
                 </div>
                 <div class="footer-right">
                     <ul class="social-media">
