--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -23,7 +23,7 @@
         <div class="team-member">
             <img src="images/member1.jpg" alt="Member 1">
             <h2>Harsh Kaushik</h2>
-            <p>Full-stack developer with a passion for creating seamless user experiences.</p>
+            <p>Full-stack developer with a passion for creating seamless user interface and user experiences.</p>
         </div>
         <div class="team-member">
             <img src="images/member2.jpeg" alt="Member 2">
@@ -38,7 +38,7 @@
         <div class="team-member">
             <img src="images/member4.jpeg" alt="Member 4">
             <h2>Arkapriya Das</h2>
-            <p>DevOps specialist ensuring our infrastructure is robust and scalable.</p>
+            <p>Front-end developer who likes to create great designs</p>
         </div>
     </section>
     <script src="script.js"></script>
