--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
     </section>
     
-    <footer>
+    <footer id="contact">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
