--- a/cardWebsite/singapore/singapore.html
+++ b/cardWebsite/singapore/singapore.html
@@ -33,10 +33,10 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../../image/singaporecard1.jpg" class="d-block w-100" alt="...">
+                        <img src="singapore_img/Singapore-4.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../image/singaporecard2.jpg" class="d-block w-100" alt="...">
+                        <img src="singapore_img/gardens-by-the-bay-1.webp" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="../../image/singaporecard3.jpg" class="d-block w-100" alt="...">
