--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="image/logo.png" alt="Logo">
                 </div> -->
                 <h1 class="logo">Travel Website</h1>
-                <input type="text" class="search-bar" placeholder="Search...">
+                <!-- <input type="text" class="search-bar" placeholder="Search..."> -->
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
