--- a/cardWebsite/india/india.html
+++ b/cardWebsite/india/india.html
@@ -33,13 +33,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../../image/usacard2.jpg" class="d-block w-100" alt="...">
+                        <img src="india_img/india1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../image/usacard5.jpg" class="d-block w-100" alt="...">
+                        <img src="india_img/india2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../image/usacard1.jpg" class="d-block w-100" alt="...">
+                        <img src="india_img/india3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -55,7 +55,7 @@
         <section class="description-section">
             <div class="description-container">
                 <div class="description-image">
-                    <img src="../../image/usa_description.jpg" alt="USA Description">
+                    <img src="india_img/india.jpg" alt="USA Description">
                 </div>
                 <div class="description-text">
                     <h2>About India</h2>
